Embed code text overflow fixen

--- a/app/stylesheets/results.css.less
+++ b/app/stylesheets/results.css.less
@@ -283,6 +283,8 @@
   &.last {
     .timeline-arrows { display: block; }
   }
+
+  .popover { max-width: 460px; }
 }
 
 .item-footer {
